# slack-lab-bot

./: .gitignore  Cargo.toml  README.md
scripts/: CLAUDE.md  build.sh  deploy.sh
src/: main.rs  service.rs
src/adapter/primary/: lambda.rs
src/adapter/secondary/: slack.rs
src/adapter/secondary/slack/: client.rs  error.rs  model.rs
src/domain/: model.rs  port.rs
src/infrastructure/slack/: client.rs  error.rs  model.rs
src/service/: activity.rs  port.rs
terraform/: CLAUDE.md  README.md  provider.env
terraform/environments/prod/: backend.tf  lambda.tf  provider.tf  variables.tf
terraform/modules/lambda/: cloudwatch.tf  iam.tf  main.tf  scheduler.tf  variables.tf
