[package]
name = "slack-lab-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
lambda_runtime = "1.2.0"
reqwest = { version = "0.13.3", default-features = false, features = ["json", "query", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros"] }
